---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "expect_parse_failure(r#\"\n            backend = { name = \"foobar\", version = \"*\" }\n            additional = \"key\"\n        \"#)"
---
  × Unexpected keys, expected only 'backend', 'channels', 'additional-dependencies', 'source', 'flags', 'config', 'target', 'build-string-prefix', 'build-number', 'secrets'
   ╭─[pixi.toml:3:13]
 2 │             backend = { name = "foobar", version = "*" }
 3 │             additional = "key"
   ·             ─────┬────
   ·                  ╰── 'additional' was not expected here
 4 │
   ╰────
  help: Did you mean 'additional-dependencies'?
